k8s/loadgen-strong-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: loadgen-strong
  labels:
    app: loadgen-strong
spec:
  selector:
    matchLabels:
      app: loadgen-strong
  template:
    metadata:
      labels:
        app: loadgen-strong
    spec:
      priorityClassName: app-batch
      terminationGracePeriodSeconds: 0
      containers:
        - name: loadgen
          image: alpine:3.20
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-lc"]
          args:
            - |
              [...]
          resources:
            # The loadgen itself will use CPU. This is intentional for a demo.
            # If it starves your node, reduce CONCURRENCY.
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 256Mi
